enlace entre index1 a index3.html

--- a/Index1.html
+++ b/Index1.html
@@ -10,7 +10,7 @@
     <h1>Hola Profesor</h1>
     <p>Esta va ser mi primera modificacion</p>
 
-     <a href="Rama2"></a>
-
+     <a href="index2.html"></a>
+     <a href="index3.html"></a>
 </body>
 </html>
