--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
     <title>Rama2</title>
 </head>
 <body>
-    
+    <h1>Bryam Avila</h1>
+    <p>Esta es la primera modificacion de la branch "miRama1"</p>
 </body>
 </html>
