la segunda modificacion de miRama1

--- a/index2.html
+++ b/index2.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Bryam Avila</h1>
     <p>Esta es la primera modificacion de la branch "miRama1"</p>
+    <p>Esta es la segunda modificacion de la branch "miRama2"</p>
 </body>
 </html>
