--- a/index3.html
+++ b/index3.html
@@ -8,5 +8,6 @@
 </head>
 <body>
       <h1>Primera modificacion en "miRama2"</h1>
+      <h2>Esta es la segunda modificacion en "miRama2"</h2>
 </body>
 </html>
